# qut-vres-orion5_ros

./: CMakeLists.txt  package.xml
Orion5-master/: mesh_harvester.py  mesh_plotter.py
Orion5-master/Libraries/: General.py  Orion5.py  testScript.py  testScript2.py
Orion5-master/Python/: Orion5Server.py
Orion5-master/STLs/: Mesh_0.stl  Mesh_1.stl  Mesh_10.stl  Mesh_11.stl  Mesh_12.stl  Mesh_13.stl  Mesh_14.stl  Mesh_15.stl  Mesh_16.stl  Mesh_17.stl  Mesh_18.stl  Mesh_19.stl  Mesh_2.stl  Mesh_20.stl  Mesh_21.stl  Mesh_22.stl  Mesh_23.stl  Mesh_24.stl  Mesh_25.stl  Mesh_26.stl  Mesh_27.stl  Mesh_28.stl  Mesh_3.stl  Mesh_4.stl  Mesh_5.stl  Mesh_6.stl  Mesh_7.stl  Mesh_8.stl  Mesh_9.stl  base_link.stl  gripper1_SCALED.stl  gripper2_SCALED.stl  hand.stl  turret.stl  turret_SCALED.stl  turret_scaled_translated.stl
launch/: listener.launch  movegroup_commander_demo.launch  movegroup_demo.launch  publisher_only.launch  robot_visualisation.launch  rviz_and_joint_publisher.launch
rviz/: urdf.rviz
scripts/: Demo_run.py  controller_simulation.py  coordinate_space_publisher.py  joint_publisher.py  movegroup_commander_publisher.py  orion5_joint_listener.py
src/scripts/: coordinate_space_publisher.py  mesh_harvester.py  mesh_plotter.py  movegroup_py_interface.py  orion5_joint_listener.py  orion5_joint_state_publisher.py  orion5_movegroup_interface.py  orion5_trajectory_action_server.py  ps2ctrl.py
urdf/: gazebo_urdf.urdf  orion5.urdf
urdf/stl/: Mesh_0.stl  Mesh_1.stl  Mesh_10.stl  Mesh_11.stl  Mesh_12.stl  Mesh_13.stl  Mesh_14.stl  Mesh_15.stl  Mesh_16.stl  Mesh_17.stl  (+25 more)
