<?xml version="1.0"?>
<package format="2">
  <name>ros_orion5</name>
  <version>0.0.0</version>
  <description>Moveit! Wrapper for the Raw Robotics Orion5 Arm</description>
  
  <maintainer email="codysmithcripps@outlook.com">Cody</maintainer>

  <license>GPLv3</license>
  
  
  <url type="website">TODO</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>rviz</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>rviz</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>


  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
